--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "issues": "https://github.com/ouxsoft/LuckByDice/issues"
   },
   "require": {
-    "php": "^7.3 || >=8.0",
+    "php": "^7.3 || ^8.0",
     "ext-json": "*"
   },
   "require-dev": {
