--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,6 +127,11 @@ jobs:
           else
               echo "Failed Codacy Coverage submitter checksum verification: $SHA256"
           fi
+        env:
+          CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
+          CODACY_ORGANIZATION_PROVIDER: gh
+          CODACY_USERNAME: ${{ github.repository_owner }}
+          CODACY_PROJECT_NAME: ${{ github.event.repository.name }}
 
   php-benchmark-test:
     name: "PHP ${{ matrix.php-version }} Benchmark Tests"
