--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,23 +115,25 @@ jobs:
         if: matrix.submit-coverage == 'yes'
         run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -f tests/output/clover.xml
 
-      - name: Submit code coverage to Codacy 
+      - name: Verified Codacy Coverage tool to checksum 
+        id: codacy-checksum
         if: matrix.submit-coverage == 'yes'
         run: |          
-          FILE=$(curl -sSL https://coverage.codacy.com/get.sh)
-          SHA256=$(echo "$FILE" | sha256sum | head -c 64)
+          SHA256=$(curl -sSL https://coverage.codacy.com/get.sh | sha256sum | head -c 64)
           CHECKSUM='8dc671cdf1038f1c95cf2dbcb4ef6ae127a243d99d0b131d4600f8b4e3e91428'
 
           if [ "$SHA256" == "$CHECKSUM" ]; then
-              echo "Verified Codacy Coverage submitter checksum verification: $SHA256"
+              echo "Checksum verification pass: $SHA256"
+              echo "::set-output name=checksum::pass"
           else
-              echo "Failed Codacy Coverage submitter checksum verification: $SHA256"
+              echo "Checksum verification fail: $SHA256"
+              echo "::set-output name=checksum::fail"
           fi
 
       - name: Submit code coverage to Codacy 
-        if: matrix.submit-coverage == 'yes'
+        if: matrix.submit-coverage == 'yes' && steps.codacy-checksum.checsum == 'pass'
         run: |
-          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r tests/output/clover.xml -l PHP
         env:
           CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
           CODACY_ORGANIZATION_PROVIDER: gh
