--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,8 +135,7 @@ jobs:
         if: matrix.submit-coverage == 'yes' 
         # && steps.codacy-checksum.checsum == 'pass'
         run: |
-          ls
-          pwd
+          ls tests/output
           bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r tests/output/clover.xml -l PHP
         env:
           CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
