--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,8 @@ jobs:
         if: matrix.submit-coverage == 'yes' 
         # && steps.codacy-checksum.checsum == 'pass'
         run: |
-          ls tests/output
+          echo ${{ github.repository_owner }}
+          echo ${{ github.event.repository.name }}
           bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r tests/output/clover.xml -l PHP
         env:
           CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
