--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,19 +130,25 @@ jobs:
 #               echo "::set-output name=checksum::fail"
 #           fi
 
+      - uses: actions/checkout@v2
+      - name: Run codacy-coverage-reporter
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          api-token: ${{ secrets.CODACY_API_TOKEN }}
+          coverage-reports: tests/output/clover.xml
 
-      - name: Submit code coverage to Codacy 
-        if: matrix.submit-coverage == 'yes' 
-        # && steps.codacy-checksum.checsum == 'pass'
-        run: |
-          echo ${{ github.repository_owner }}
-          echo ${{ github.event.repository.name }}
-          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r tests/output/clover.xml -l PHP
-        env:
-          CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
-          CODACY_ORGANIZATION_PROVIDER: gh
-          CODACY_USERNAME: ${{ github.repository_owner }}
-          CODACY_PROJECT_NAME: ${{ github.event.repository.name }}
+#       - name: Submit code coverage to Codacy 
+#         if: matrix.submit-coverage == 'yes' 
+#         # && steps.codacy-checksum.checsum == 'pass'
+#         run: |
+#           echo ${{ github.repository_owner }}
+#           echo ${{ github.event.repository.name }}
+#           bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r tests/output/clover.xml -l PHP
+#         env:
+#           CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
+#           CODACY_ORGANIZATION_PROVIDER: gh
+#           CODACY_USERNAME: ${{ github.repository_owner }}
+#           CODACY_PROJECT_NAME: ${{ github.event.repository.name }}
 
 #   php-benchmark-test:
 #     name: "PHP ${{ matrix.php-version }} Benchmark Tests"
